# testlibevent

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  cmake.yml
Debug/: taefa
Debug/src/: subdir.mk
Release/: makefile  taefa
Release/src/: subdir.mk  taefa.d
src/: libevent.cpp  taefa.cpp
src/sample/: CMakeLists.txt  dns-example.c
